# macro-recorder

./: CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/macro_recorder/: __init__.py  cli.py
src/macro_recorder/commands/: __init__.py  info.py  play.py  record.py
src/macro_recorder/core/: __init__.py  player.py  recorder.py
src/macro_recorder/models/: __init__.py  event_type.py  mouse_event.py  recording.py  recording_metadata.py
src/macro_recorder/observers/: __init__.py  playback_observer.py  recording_observer.py
src/macro_recorder/storage/: __init__.py  storage_service.py
src/macro_recorder/ui/: __init__.py  playback_ui.py  recording_ui.py  rich_ui.py
